--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.container{
+    width: 70%;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px black double;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 3px rgb(0, 0, 0);
+    font-family: sans-serif;
+    background: transparent;
+    backdrop-filter: blur(2px);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+    margin-top: 10px;
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-container{
+    border: 2px black solid;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.img-location{
+    width: 12%;
+    padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.input-box{
+    margin-left: 5px;
+    height: 40px;
+    width: 80%;
+    border: none;
+    font-size: 30px;
+    font-weight: 700;
+    background: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-box:focus{
+    outline: none;
+}
+
+.city-container{
+    text-align: center;
+    margin: 0;
+}
+
+.city{
+    font-size: 30px;
+    margin-top: 15px;
+    margin-bottom: 0;
+}
+
+.temp{
+    font-size: 40px;
+    margin: 0;
+}
+
+.sub-container{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+}
+
+.pressure-humidity-container{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.img-pressure-humidity{
+    width: 10%;
+    margin: 5px;
 }
