--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: url('./bacground.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 code {
